--- a/package.json
+++ b/package.json
@@ -22,25 +22,25 @@
     "url": "https://github.com/rangle/nibelu-ng/issues"
   },
   "homepage": "https://github.com/rangle/nibelu-ng",
-  "dependencies": {
+  "peerDependencies": {
     "angular": "^1.3.17",
     "nibelung": "^0.3.6"
   },
   "devDependencies": {
+    "angular": "^1.3.17",
     "angular-mocks": "^1.3.17",
     "bower": "~1.4.1",
     "chai": "^2.3.0",
     "istanbul": "~0.3.14",
-    "karma": "^0.12.35",
+    "karma": "^1.7.0",
     "karma-chai": "^0.1.0",
     "karma-chrome-launcher": "~0.1.12",
     "karma-coverage": "~0.3.1",
-    "karma-firefox-launcher": "~0.1.6",
     "karma-mocha": "^0.1.10",
-    "karma-phantomjs-launcher": "^0.2.0",
     "karma-sinon": "^1.0.4",
     "karma-threshold-reporter": "~0.1.15",
     "mocha": "~2.2.5",
+    "nibelung": "^0.3.6",
     "phantomjs": "^1.9.17",
     "q": "^1.4.1",
     "ramda": "^0.15.1",
